# memory-blackbox

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  DCO.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: spec.md  threat-mapping.md  threat-model.md
examples/extending/: README.md  adapter_template.py  detector_template.py
examples/incident_demo/: README.md  run.py
examples/mcp_gateway/: README.md  run.py
examples/sidecar/: README.md  run.py
src/agent_forensics/: cli.py  config.py  demo.py
src/agent_forensics/adapters/: base.py  chroma_.py  letta_.py  mem0_.py  memory_md.py  pgvector_.py
src/agent_forensics/capture/: engine.py  sidecar.py  wrapper.py
src/agent_forensics/crypto/: keys.py
src/agent_forensics/dag/: store.py
src/agent_forensics/detectors/: __init__.py  base.py  injection_scan.py  provenance_missing.py  secrets_pii.py  trust_scoring.py  unicode_smuggling.py  write_rate.py
src/agent_forensics/exporters/: markdown.py  mermaid.py  sarif.py
src/agent_forensics/ledger/: store.py
src/agent_forensics/merkle/: anchor.py  tree.py
src/agent_forensics/model/: records.py
src/memory_blackbox/: __init__.py  cli.py  config.py  demo.py  embedding.py
src/memory_blackbox/adapters/: __init__.py  base.py  chroma_.py  letta_.py  mem0_.py  memory_md.py  pgvector_.py
src/memory_blackbox/capture/: __init__.py  engine.py  gateway.py  sidecar.py  wrapper.py
src/memory_blackbox/crypto/: __init__.py  hashing.py  keys.py  signing.py
src/memory_blackbox/dag/: __init__.py  schema.sql  store.py  traverse.py
src/memory_blackbox/detectors/: __init__.py  base.py  drift.py  injection_scan.py  provenance_missing.py  secrets_pii.py  trust_scoring.py  unicode_smuggling.py  write_rate.py
src/memory_blackbox/exporters/: __init__.py  dot.py  markdown.py  mermaid.py  sarif.py
src/memory_blackbox/ledger/: __init__.py  chain.py  schema.sql  store.py
src/memory_blackbox/merkle/: __init__.py  anchor.py  tree.py
src/memory_blackbox/model/: __init__.py  canonical.py  edges.py  ids.py  records.py
src/memory_blackbox/query/: __init__.py  blast_radius.py  drift.py  rollback.py  timeline.py  trace.py  verify.py
tests/: conftest.py
tests/e2e/: test_incident_replay.py
tests/integration/: test_adapters.py  test_capture.py  test_cli.py  test_dag.py  test_drift.py  test_gateway.py  test_ledger.py  test_merkle_checkpoint.py  test_query.py  test_security_hardening.py  test_sidecar.py
tests/perf/: test_scale.py
tests/property/: test_canonical_property.py
tests/unit/: test_canonical.py  test_detectors.py  test_edges.py  test_exporters.py  test_hashing.py  test_ids.py  test_keys.py  test_merkle.py  test_records.py  test_signing.py  test_smoke.py
