[project]
name = "agent-forensics"
version = "0.0.0"
description = "Provenance and incident-reconstruction toolkit for AI agent memory."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Lav Kumar", email = "lav.kumar.dev@gmail.com" }]
keywords = [
    "ai-agents",
    "memory",
    "provenance",
    "forensics",
    "security",
    "dfir",
    "tamper-evident",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "blake3>=1.0",
    "cryptography>=42",
    "pydantic>=2.5",
    "typer>=0.12",
    "orjson>=3.9",
]

[project.urls]
Homepage = "https://github.com/lavkumarv/agent-forensics"
Repository = "https://github.com/lavkumarv/agent-forensics"

[project.scripts]
agent-forensics = "agent_forensics.cli:main"

[project.optional-dependencies]
mem0 = ["mem0ai"]
letta = ["letta"]
pgvector = ["psycopg[binary]", "pgvector"]
chroma = ["chromadb"]
mcp = ["mcp"]
drift = ["sentence-transformers"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_forensics"]

# --- ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

# --- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that may require optional backends",
    "e2e: end-to-end incident-replay tests",
    "perf: performance and benchmark tests",
    "property: hypothesis-based property tests",
    "slow: long-running tests",
]

# --- coverage ---------------------------------------------------------------
# "core" = the integrity-critical packages that must hold >=90% coverage.
[tool.coverage.run]
branch = true
source = [
    "agent_forensics.model",
    "agent_forensics.crypto",
    "agent_forensics.ledger",
    "agent_forensics.merkle",
    "agent_forensics.dag",
    "agent_forensics.query",
]
# Core packages are docstring-only stubs until their milestones land; silence the
# "nothing collected yet" warnings until real code (and the >=90% gate) arrive.
disable_warnings = ["no-data-collected", "module-not-imported"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
